2007-07-17  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/editor2/frontend/handlers/CommonUploadIncludePartHandler.java:
	Fixed bug in editor causing empty include parts not to be saved correctly.
	
	* projects/core/editor2/xsl/runtime.xsl: 
	Removed xmlns declarations from editor output.
	
	* projects/core/script/wfxEditor.js: 
	Improved copy & past in javascript editor form.

2007-07-03  Martin Leidig  <mleidig@schlund.de>

	Performance improvements for client-side JSON Javascript webservice 
	stub usage:
	- Multiple Javascript webservice stubs now can be generated and delivered 
	as a single file
	- Javascript webservice stub files now can optionally be requested without
	a session id, thus the ETag/caching-mechanism works across sessions
	
	The pfx:wsscript tag now has an optional attribute session, indicating
	if the session id should be added to stub requests (default is false).
	The name attribute now can contain multiple service names separated by
	whitespace.

	* src/de/schlund/pfixcore/webservice/ServiceRuntime.java: added support
	for generation of multiple stubs into one file
	* src/de/schlund/pfixcore/webservice/utils/FileCache.java: cleanup
	* projects/core/xsl/master.xsl: added support for multiple service
	names and sessionless usage to pfx:wsscript tag
	* projects/webservice/conf/depend.xml: removed encoding setting

2007-07-02  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/editor2/core/spring/UserManagementServiceImpl.java: 
	* src/de/schlund/pfixcore/editor2/core/vo/EditorUser.java: 
	Use LinkedHashMaps instead of HashMaps to keep order of entries.

2007-06-27  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/config/DirectOutputServletConfig.java: fixed property
	customization problem, added support for customizable global and pagerequest 
	properties (incomplete CustomizationHandler initialization)

2007-06-21  Martin Leidig  <mleidig@schlund.de>
